--- a/alpha/venues/assets/edit-venue-combine.css
+++ b/alpha/venues/assets/edit-venue-combine.css
@@ -4,3 +4,4 @@
 //= require styles/place_autocomplete
 //= require styles/venues/edit-venue
 //= require styles/autoSuggest
+//= require styles/suggest
