--- a/alpha/cityfusion_admin/templates/cf-admin/admin-share-stats.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-share-stats.html
@@ -31,7 +31,7 @@
                 <form method="post" name="share-campaign-stats" action="{% url 'admin_share_stats' campaign.id %}">
                     {% csrf_token %}
                     <input type="hidden" name="campaign_id" value="{{ campaign.id }}">
-                    <input name="account_id" class="user-input" value="" data-ajax-url="{% url 'admin_user_autocomplete' %}"  />
+                    <input name="user_id" class="user-input" value="" data-ajax-url="{% url 'admin_user_autocomplete' %}"  />
                     <input type="submit" value="Share" />
                 </form>
                 <br>
