making fixed size for footer and header in emails

--- a/alpha/event/templates/featured/featured_events.html
+++ b/alpha/event/templates/featured/featured_events.html
@@ -9,7 +9,7 @@
         </td>
         <td width="10" align="left">
             <div style="line-height:0;">
-                <img src="{{site}}{{STATIC_URL}}/images/emails/blank.gif" width="10" height="10" alt="" />
+                <img src="{{site}}/static/images/emails/blank.gif" width="10" height="10" alt="" />
             </div>
         </td>
     {% else %}
