--- a/alpha/accounts/templates/accounts/emails/_footer.html
+++ b/alpha/accounts/templates/accounts/emails/_footer.html
@@ -1,15 +1,16 @@
 <!-- Footer -->
-<table bgcolor="#022e52" width="100%" cellpadding="0" cellapscing="0" style="border-collapse:collapse;">    
+<table width="100%" cellpadding="0" cellapscing="0" style="border-collapse:collapse;">
     <tr>
-        <td align="center" height="35">
-            <table width="720" cellpadding="0" cellapscing="0" style="border-collapse:collapse;">
+        <td align="center" height="35" style="background: #e3e3e3;">
+            <table bgcolor="#022e52" width="726" height="35" cellpadding="0" cellapscing="0"
+                   style="border-collapse:collapse;">
                 <tr>
-                    <td align="left">
+                    <td align="left" style="padding-left: 10px;">
                         <span style="color:#ffffff; font-size: 13px; font-family: sans-serif;">
                             © 2014 Cityfusion
                         </span>
                     </td>
-                    <td align="right" style="text-align: right;">
+                    <td align="right" style="text-align: right;padding-right: 10px;">
                         <span style="color:#ffffff; font-size: 14px; font-family: sans-serif; ">
                             <a href="{{site}}{% url 'staticpage' alias='faq' %}"
                                target="_blank"
