--- a/alpha/accounts/templates/accounts/emails/_header.html
+++ b/alpha/accounts/templates/accounts/emails/_header.html
@@ -6,12 +6,12 @@
 </style>
 
 <!-- Header -->
-<table bgcolor="#022e52" width="100%" cellpadding="0" cellapscing="0" style="border-collapse:collapse;">    
+<table width="100%" cellpadding="0" cellapscing="0" style="border-collapse:collapse;">
     <tr>
-        <td align="center" height="120">
-            <table width="670" cellpadding="0" cellapscing="0" style="border-collapse:collapse;">
+        <td align="center" height="120" style="background: #e3e3e3;">
+            <table bgcolor="#022e52" width="726" height="100%" cellpadding="0" cellapscing="0" style="border-collapse:collapse;">
                 <tr>
-                    <td align="left">
+                    <td align="left" style="padding-left: 10px;">
                         <img alt="" style="border: none;" src="{{site}}{{STATIC_URL}}images/logo.png">
                     </td>
                 </tr>
