--- a/alpha/accounts/templates/accounts/emails/in_the_loop_email.html
+++ b/alpha/accounts/templates/accounts/emails/in_the_loop_email.html
@@ -9,7 +9,7 @@
 <table bgcolor="#e3e3e3" width="100%" cellpadding="0" cellapscing="0" style="border-collapse:collapse;">
     <tr>
         <td align="center">
-            <table bgcolor="#ffffff" width="670px" cellpadding="0" cellapscing="0" style="border-collapse:collapse;">
+            <table bgcolor="#ffffff" width="670" cellpadding="0" cellapscing="0" style="border-collapse:collapse;">
                 
                 {% include 'accounts/emails/_featured_events.html' %}
 
