--- a/alpha/event/templates/events/create/_form.html
+++ b/alpha/event/templates/events/create/_form.html
@@ -74,7 +74,7 @@
                             {{form.city_identifier}}
                         </td>
                     </tr>
-                    <tr>
+                    <tr data-id="suggest_map_container">
                         <td>Location</td>
                         <td>
                             <div class="location_map">{{form.location}}</div>
