--- a/alpha/event/assets/styles/widgets.css
+++ b/alpha/event/assets/styles/widgets.css
@@ -604,6 +604,10 @@ fieldset legend{
     color: #9c1a00;
 }
 
+.event-delete-action {
+    color: #9c1a00;
+}
+
 body .event-actions-popup {
     display: none;
     width: 320px;
