--- a/alpha/advertising/templates/advertising/setup.html
+++ b/alpha/advertising/templates/advertising/setup.html
@@ -13,6 +13,15 @@
     <script src="{{STATIC_URL}}fancybox/jquery.fancybox.js" type="text/javascript"></script>
 {% endblock %}
 
+{% block body_inner %}
+    <div class="ad-sizes-preview">
+        <div class="ad-sizes-preview__box">
+            <div class="ad-sizes-preview__sample"></div>
+        </div>
+    </div>
+    {{ block.super }}
+{% endblock body_inner %}
+
 {% block page %}
     <div class="advertising-form">
         <form  enctype="multipart/form-data" method="post" name="advertising-setup">
@@ -22,10 +31,6 @@
                     Advertising - setup
                 </div>
                 <div class="advertising-form__details-content">
-                    <div class="advertising-form__ad-sizes-preview">
-                        <img src="{{ STATIC_URL }}images/ad_banner_sizes.png" alt="" />
-                        <div class="advertising-form__ad-sizes-pointer"></div>
-                    </div>
                     {%if form.errors %}
                         <div class="errors" style="border:1px solid RED;border-radius:4px;">
                             <ul style="list-style-type: none;">
