--- a/alpha/advertising/assets/styles/advertising-setup.css
+++ b/alpha/advertising/assets/styles/advertising-setup.css
@@ -288,6 +288,20 @@ body .hintbox {
     position: relative;
 }
 
+.preloaded-ad-sizes {
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+    visibility: hidden;
+}
+
+.preloaded-ad-sizes img {
+    position: absolute;
+}
+
 .ad-sizes-preview {
     position: fixed;
     left: 0;
@@ -295,13 +309,13 @@ body .hintbox {
     width: 100%;
     height: 100%;
     display: none;
+    z-index: 10;
 }
 
 .ad-sizes-preview__box {
     position: absolute;
     left: 50%;
     top: 50%;
-    z-index: 10;
     background: #ffffff;
     padding: 5px;
     box-shadow: 0 0 5px #000;
