--- a/alpha/advertising/templates/advertising/setup.html
+++ b/alpha/advertising/templates/advertising/setup.html
@@ -14,6 +14,15 @@
 {% endblock %}
 
 {% block body_inner %}
+    <div class="preloaded-ad-sizes">
+        <img src="{{STATIC_URL}}advertising/images/ad_300_250.jpg" alt="" />
+        <img src="{{STATIC_URL}}advertising/images/ad_300_100.jpg" alt="" />
+        <img src="{{STATIC_URL}}advertising/images/ad_300_600.jpg" alt="" />
+        <img src="{{STATIC_URL}}advertising/images/ad_728_90.jpg" alt="" />
+        <img src="{{STATIC_URL}}advertising/images/ad_120_60.jpg" alt="" />
+        <img src="{{STATIC_URL}}advertising/images/ad_468_60.jpg" alt="" />
+        <img src="{{STATIC_URL}}advertising/images/ad_120_600.jpg" alt="" />
+    </div>
     <div class="ad-sizes-preview">
         <div class="ad-sizes-preview__box">
             <div class="ad-sizes-preview__sample"></div>
