Show 120x60 ads in in the loop and reminder emails

--- a/alpha/accounts/templates/accounts/emails/_right_ads.html
+++ b/alpha/accounts/templates/accounts/emails/_right_ads.html
@@ -5,5 +5,13 @@
         <div style="border: 3px solid #ffffff; border-left: 10px solid #ffffff;">
             {% advertising "120x600" %}
         </div>
+
+        <div style="line-height:0;">
+            <img src="{{site}}{{STATIC_URL}}images/emails/blank.gif" width="5" height="5" alt="" />
+        </div>
+
+        <div style="border: 3px solid #ffffff; border-left: 10px solid #ffffff;">
+            {% advertising "120x60" %}
+        </div>
     </div>
 </td>
