--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -103,7 +103,10 @@
                                 <a href="https://www.facebook.com/cityfusion.ca" target="_blank" class="footer-icon facebook"></a>
                                 <a href="http://www.twitter.com/cityfusion_ca" target="_blank" class="footer-icon twitter"></a>
                                 <a href="#" class="footer-icon email"></a>
-                                <a href="#" class="footer-icon google"></a>
+                                <a href="https://plus.google.com/115070192756503195680"
+                                   target="_blank"
+                                   class="footer-icon google"
+                                   rel="publisher"></a>
                                 <a href="#" class="footer-icon youtube"></a>
                             </li>
                         </ul>
