--- a/alpha/home/assets/base-combine.css
+++ b/alpha/home/assets/base-combine.css
@@ -2,7 +2,7 @@
 //= require styles/styles-new
 //= require styles/widgets
 //= require styles/pagination
-//= require styles/advertising
+//= require styles/rotation
 //= require fancybox/jquery.fancybox
 //= require date/css/redmond/jquery-ui-1.8.23.custom
 //= require styles/accounts/signin_signup
