--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang='en_US'>
 <head>
     {% load analytics %}
@@ -47,7 +47,7 @@
                 <div class="content">
                     <div class="logo">
                         <a href="/">
-                            <img src="{{STATIC_URL}}images/logo.png" />
+                            <img src="{{STATIC_URL}}images/logo.png" alt="" />
                         </a>
                     </div>
 
